# MisraOS

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  build.sh  limine.cfg  log
disk_root/boot/: kernel  limine.sys
kernel/: :  :w  ACPI.cpp  ACPI.hpp  CMakeLists.txt  Common.hpp  Constants.hpp  GDT.cpp  GDT.hpp  IDT.cpp  IDT.hpp  IO.cpp  IO.hpp  Interrupts.cpp  Interrupts.hpp  KernelEntry.cpp  KeyCodes.hpp  Keyboard.cpp  Keyboard.hpp  Memory.hpp  MemoryManager.cpp  MemoryManager.hpp  Panic.cpp  Panic.hpp  PhysicalMemoryManager.cpp  PhysicalMemoryManager.hpp  Print.cpp  Print.hpp  Printf.cpp  Printf.hpp  Puts.cpp  Puts.hpp  String.cpp  String.hpp  VirtualMemoryManager.cpp  VirtualMemoryManager.hpp  bitmap.c  bitmap.h  font.c  font.h  (+18 more)
kernel/Bootloader/: BootInfo.cpp  BootInfo.hpp  Entry.cpp  Util.cpp  Util.hpp  stivale2.h
kernel/Renderer/: Colors.hpp  Font.cpp  Font.hpp  FontRenderer.cpp  FontRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp
kernel/Utils/: Bitmap.cpp  Bitmap.hpp  String.cpp  String.hpp
kernel/paging/: paging.h
sys_root/boot/: kernel  limine.cfg  limine.sys
sys_root/boot/EFI/BOOT/: BOOTX64.EFI
